4-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: example-app-deployment
  labels:
    app: example-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app-pod
  template:
    metadata:
      labels:
        app: example-app-pod
    spec:
      containers:
        - image: zerosuxx/nodejs-example-app:0.1.0
          name: app-container
          args:
            - index.js
          command:
            - node
          ports:
            - name: "http"
              containerPort: 3000
              protocol: "TCP"
      restartPolicy: Always
