4-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: example-app-service
spec:
  ports:
    - name: "web"
      port: 3000
      targetPort: "http"
  selector:
    app: example-app-pod
