4-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: example-app
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-example-app.zer0.hu
      http:
        paths:
          - backend:
              service:
                name: "example-app-service"
                port:
                  number: 3000
            path: /
            pathType: Prefix
